Fixed more margin and spacing issues on the splash page.

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -62,11 +62,12 @@ html {
 }
 
 body {
+  color: #222;
+  font-family: "Roboto";
   height: 100%;
   margin: 0 auto;
   padding: 0;
   width: 100%;
-  color: #222;
 }
 
 h1, h2 {
@@ -286,7 +287,7 @@ div.wysiwyg iframe.wysiwyg-content-large {
 .oppia-sidebar-header {
   background: #eee;
   border-bottom: 1px solid #ccc;
-  height: 50px;
+  height: 56px;
   padding-top: 6px;
 }
 
@@ -324,6 +325,12 @@ div.wysiwyg iframe.wysiwyg-content-large {
   font-family: "Roboto", "Arial", sans-serif;
   font-size: 16px;
   font-weight: 400;
+  height: 56px;
+  padding-top: 17px;
+}
+
+.oppia-navbar-nav {
+  margin-left: 20px;
 }
 
 .oppia-navbar-breadcrumb {
@@ -333,7 +340,7 @@ div.wysiwyg iframe.wysiwyg-content-large {
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
-  padding-top: 15px;
+  padding-top: 17px;
   padding-bottom: 15px;
 }
 
@@ -365,7 +372,7 @@ div.wysiwyg iframe.wysiwyg-content-large {
 .navbar-default .navbar-container {
   background: #05a69a;
   box-shadow: 0 1px 5px rgba(12,12,24, .3);
-  height: 50px;
+  height: 56px;
 }
 
 .navbar-default .dropdown-menu {
@@ -502,14 +509,15 @@ div.wysiwyg iframe.wysiwyg-content-large {
 
 .oppia-gallery-navbar-button-container {
   border-radius: 0;
-  margin-top: 8px;
+  margin-top: 10px;
 }
 
 .btn.oppia-gallery-add-exploration-button {
   background-color: rgba(5, 190, 178, 0.9);
   color: rgba(255,255,255,0.8);
   font-size: 15px;
-  padding: 2px 12px 4px 12px;
+  height: 34px;
+  padding: 3px 12px 4px 12px;
 }
 
 
@@ -527,23 +535,29 @@ div.wysiwyg iframe.wysiwyg-content-large {
 .oppia-gallery-tiles-introduction {
   font-size: 1.2em;
   padding-bottom: 20px;
-  padding-top: 10px;
+  padding-top: 20px;
 }
+
 .oppia-gallery-tiles-container {
   height: 100%;
-  margin-left: 160px;
-  margin-right: 160px;
-  max-width: 900px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 800px;
   min-height: 500px;
-  padding-top: 25px;
+  padding: 25px;
+}
+
+.oppia-gallery-tile-container {
+  min-width: 800px;
+  margin-left: 25px;
 }
 
 md-card.oppia-gallery-tile {
   background-color: #fff;
-  border: 1px solid #b3b3b3;
+  border-bottom: 1px solid #ccc;
   color: #888;
-  height: 96px;
-  margin: -1px 0;
+  height: 120px;
+  margin: 0px;
   position: relative;
   width: 100%;
 }
@@ -552,22 +566,15 @@ md-card.oppia-gallery-tile {
 }
 
 .oppia-gallery-tile-image-container {
-  height: 96px;
+  height: 120px;
   left: 0;
-  max-width: 96px;
-  position: relative;
   top: 0;
-  width: 96px;
+  width: 120px;
 }
 /* This centers the image horizontally and vertically. */
 .oppia-gallery-tile-image {
-  bottom: 0;
-  height: 96px;
-  left: 0;
-  margin: auto;
-  right: 0;
-  top: 0;
-  width: 96px;
+  height: 120px;
+  width: 120px;
 }
 
 .oppia-gallery-tile-image-translucent {
@@ -599,7 +606,8 @@ md-card.oppia-gallery-tile {
 }
 
 .oppia-gallery-tile-details {
-  padding-left: 85px;
+  padding-left: 100px;
+  padding-top: 5px;
 }
 .oppia-gallery-tile-first-row {
   font-size: 120%;
@@ -628,6 +636,9 @@ md-card.oppia-gallery-tile {
   color: white;
 }
 
+.carousel-indicators {
+  display: none;
+}
 
 .oppia-page-title {
   color: #222;
@@ -681,8 +692,9 @@ md-card.oppia-gallery-tile {
 }
 
 .oppia-cc-icon {
+  bottom: 20px;
   position: absolute;
-  right: 20px;
+  right: 25px;
 }
 
 .oppia-wide-panel {
@@ -1044,6 +1056,11 @@ oppia-parameter {
 
 /* Splash page. */
 
+.oppia-splash-search-form {
+  margin-top: 10px;
+  padding-right: 0px;
+}
+
 .oppia-splash-search-input {
   background: #04857c;
   border: 1px solid #018c7f;
@@ -1137,9 +1154,9 @@ oppia-parameter {
   z-index: 100;
 }
 
-.oppia-gallery-banner-phrase {
+.oppia-gallery-banner-tagline {
   color: #fff;
-  font-family: Capriola;
+  font-family: "Capriola", "Roboto", Arial, sans-serif;
   font-size: 20px;
   padding-top: 190px;
 }
@@ -1158,7 +1175,7 @@ oppia-parameter {
   font-size: 1.3em;
   height: 120px;
   margin-top: -75px;
-  padding-top: 50px;
+  padding-top: 45px;
   position: relative;
   text-align: center;
   width: 100%;
@@ -1194,11 +1211,10 @@ oppia-expression-error-tag:after {
 }
 .oppia-navbar-menu {
   margin-left: 10px;
-  margin-top: -1px;
 }
 .oppia-navbar-brand-name {
   float: left;
-  height: 50px;
+  height: 56px;
   line-height: 20px;
   margin-left: -10px;
   text-decoration: none;
@@ -1214,7 +1230,7 @@ oppia-expression-error-tag:after {
   font-weight: 300;
   height: 40px;
   margin-left: 6px;
-  margin-top: 6px;
+  margin-top: 9px;
 }
 
 .oppia-select {
